--- a/templates/security/new_pass.html.twig
+++ b/templates/security/new_pass.html.twig
@@ -9,8 +9,7 @@
 {% endblock%}
 
 {% block javascripts %}
-    {{ encore_entry_script_tags('login') }}
-    {{ encore_entry_script_tags('app') }}
+    {{ encore_entry_script_tags('newPass') }}
 {% endblock%}
 
 {% block body %}
@@ -19,10 +18,12 @@
     <div class="form-container">
         <div class="logo-img"></div>
         <form method="post">
-            <h2>Réinitialisation de votre mot de passe</h2>
+            <h2>Réinitialisation du mot de passe</h2>
             <p>{{ user.email }}</p>
             {{ form_start(newPassForm) }}
+            <div class="form-inputs">
                 {{ form_row(newPassForm.plainPassword) }}
+            </div>
                 <button type="submit" class="mainForm-btn">Enregistrer</button>
             {{ form_end(newPassForm) }}
         </form>
