--- a/templates/structure/structure.html.twig
+++ b/templates/structure/structure.html.twig
@@ -1,23 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StructureController!{% endblock %}
+{% block title %}Fitness Club - Bienvenue{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('build/read.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/navBar.css') }}">
 
 {% endblock%}
 
 {% block javascripts %}
     {{ encore_entry_script_tags('read') }}
+    {{ encore_entry_script_tags('navBar') }}
 
 {% endblock%}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    {% include 'Partials/_navBar.html.twig' %}
+
 
 <div class="example-wrapper">
     <h1>Hello {{ structure.user.email }}! ✅</h1>
